Code for login and register user service
